chore(core): regenerate client, added example
